--- a/app/src/main/res/layout/event_row_item.xml
+++ b/app/src/main/res/layout/event_row_item.xml
@@ -4,21 +4,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardElevation="4dp"
-    app:cardCornerRadius="8dp">
+    android:layout_margin="@dimen/default_padding_x0.5"
+    app:cardElevation="@dimen/default_padding_x0.25"
+    app:cardCornerRadius="@dimen/default_padding_x0.5">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="@dimen/default_padding">
 
         <TextView
             android:id="@+id/event_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Event Name"
+            android:text="@string/hint_event_name"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -26,14 +26,14 @@
             android:id="@+id/event_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Event Location"
+            android:text="@string/hint_event_location"
             android:textSize="14sp" />
 
         <TextView
             android:id="@+id/event_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Event Date"
+            android:text="@string/hint_event_date"
             android:textSize="14sp" />
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
