--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_account"
-        android:title="Account"
+        android:id="@+id/login"
+        android:title="@string/login"
         android:icon="@drawable/baseline_account_circle_24"
-    app:showAsAction="always" />
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/logout"
+        android:title="@string/logout"
+        android:icon="@drawable/baseline_close_24"
+        app:showAsAction="always" />
 </menu>
