--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme -->
-    <style name="Base.Theme.CopenhagenBuzz" parent="Theme.MaterialComponents.DayNight">
+    <style name="Base.Theme.CopenhagenBuzz" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
+    <style name="Base.Theme.CopenhagenBuzz.DayNight" parent="Theme.MaterialComponents.DayNight">
         <!-- Enable action bar -->
         <item name="windowActionBar">true</item>
         <item name="windowNoTitle">false</item>
