--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,23 +23,34 @@
             app:titleCentered="true" />
 
     </com.google.android.material.appbar.AppBarLayout>
-    <include
-        android:id="@+id/content_main"
-        layout="@layout/content_main"
+
+    <!-- Main Content Area -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/contentFrame"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/null_dp"
-        app:layout_constraintTop_toBottomOf="@+id/top_app_bar_container"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"/>
+        android:layout_height="match_parent"
+        android:padding="@dimen/margin_dumb_fix"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <!-- Your dynamic content will be injected here -->
+        <include
+            android:id="@+id/content_main"
+            layout="@layout/content_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAddEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/field_gap"
+        android:contentDescription="@string/add_event"
         android:src="@drawable/baseline_add_24"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="visible"
         tools:ignore="MissingConstraints" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
