--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,8 @@
     <color name="purple_200">#E91E63</color>
     <color name="purple_500">#9C27B0</color>
     <color name="purple_700">#7B1FA2</color>
+    <color name="chipBorder">#03DAC5</color>
+
+
 
 </resources>
