--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,14 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <!-- Visible only when NOT logged in -->
     <item
         android:id="@+id/login"
         android:title="@string/login"
         android:icon="@drawable/baseline_account_circle_24"
         app:showAsAction="always" />
+
+    <!-- Visible only when logged in -->
     <item
         android:id="@+id/logout"
         android:title="@string/logout"
         android:icon="@drawable/baseline_close_24"
         app:showAsAction="always" />
+
+    <!-- New item - visible only when logged in -->
+    <item
+        android:id="@+id/action_add_event"
+        android:title="@string/add_event"
+        android:icon="@drawable/baseline_add_24"
+        app:showAsAction="ifRoom" />
 </menu>
