--- a/app/src/main/res/layout/fragment_add_event.xml
+++ b/app/src/main/res/layout/fragment_add_event.xml
@@ -24,6 +24,7 @@
             android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/text_field_event_location"
         android:layout_width="match_parent"
@@ -42,7 +43,6 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-
         android:id="@+id/text_pickDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -57,20 +57,20 @@
             android:hint="@string/hint_pick_date"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/event_type_container"
         style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/field_gap"
-        android:hint="@string/app_name">
+        android:hint="@string/hint_event_type">
 
         <AutoCompleteTextView
             android:id="@+id/event_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:contentDescription="event type"
-            android:hint="@string/hint_event_type"
             android:inputType="none"
             app:simpleItems="@array/dropdown_options"
             tools:ignore="LabelFor" />
@@ -94,6 +94,5 @@
             android:maxLines="6" />
 
     </com.google.android.material.textfield.TextInputLayout>
-
 
 </LinearLayout>
