--- a/app/src/main/res/layout/event_row_item.xml
+++ b/app/src/main/res/layout/event_row_item.xml
@@ -38,13 +38,33 @@
 
         <ImageView
             android:id="@+id/favoriteIcon"
-            android:layout_width="32dp"
+            android:layout_width="wrap_content"
             android:layout_height="32dp"
-            android:src="@drawable/ic_star_border"
-            android:contentDescription="@string/favorite"
+            android:layout_marginStart="8dp"
             android:clickable="true"
+            android:contentDescription="@string/favorite"
             android:focusable="true"
             android:padding="4dp"
+            android:src="@drawable/ic_star_border" />
+        <ImageView
+            android:id="@+id/editIcon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/baseline_create_24"
+            android:contentDescription="@string/edit"
+            android:visibility="gone"
+            android:padding="4dp"
             android:layout_marginStart="8dp"/>
+
+        <ImageView
+            android:id="@+id/deleteIcon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/baseline_delete_outline_24"
+            android:contentDescription="@string/delete"
+            android:visibility="gone"
+            android:padding="4dp"
+            android:layout_marginStart="8dp"/>
+
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
