--- a/app/src/main/res/layout/fragment_add_event.xml
+++ b/app/src/main/res/layout/fragment_add_event.xml
@@ -94,5 +94,35 @@
             android:maxLines="6" />
 
     </com.google.android.material.textfield.TextInputLayout>
+    <ImageView
+        android:id="@+id/imageViewEventPhoto"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_marginTop="@dimen/field_gap"
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/event_photo" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="@dimen/field_gap">
+
+        <Button
+            android:id="@+id/btnTakePhoto"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Take Photo" />
+
+        <Button
+            android:id="@+id/btnChooseFromGallery"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Choose from Gallery"
+            android:layout_marginStart="8dp"/>
+    </LinearLayout>
 
 </LinearLayout>
